--- a/html and css/2nd.html
+++ b/html and css/2nd.html
@@ -5,6 +5,7 @@
                 
             </head>
             <body>
+                    <h1>this is image</h1>
                 
                 <a href="image.html" > click to view the image</a>
             </body>
