--- a/html and css/1st.html
+++ b/html and css/1st.html
@@ -14,6 +14,7 @@
         </style>
     </head>
     <body>
+        <h1>this is table</h1>
         
         <table>
             <H1> Details</H1> 
