--- a/html and css/1st.html
+++ b/html and css/1st.html
@@ -20,7 +20,7 @@
             <thead>
                 <th>roll no</th>
                 <th> full name</th>
-            <th> photo</th>
+            <th> mobile no</th>
             </thead>
             <tr>
                 <td> 1</td>
@@ -32,7 +32,7 @@
                 <td> 2</td>
                 <td> THIRTHALA RAJKUMAR
                 </td>
-                <TD>7780303340 </TD>
+                <TD>7777777777</TD>
             </TR>
         </table>
     </body>
